fix sonarqube errors